<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".Activity_ShiftCipher">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/field_input" />

    <EditText
        android:id="@+id/inputEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="right"
	    android:orientation="horizontal">
	    
	    <Button
	        android:id="@+id/inputClearButton"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:text="@string/button_clear" />
	    
	    <Button
	        android:id="@+id/inputShiftButton"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:text="@string/button_shift" />
	
	</LinearLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/numberPickerString" />

    <NumberPicker 
        android:id="@+id/numberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" />
    
    <CheckBox
        android:id="@+id/reverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Reverse Loop?" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/field_output" />
    
    <EditText
        android:id="@+id/outputEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="right"
	    android:orientation="horizontal">
    
        <Button
	        android:id="@+id/outputClearButton"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:text="@string/button_clear" />
    
    	<Button
	        android:id="@+id/outputCopyButton"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:text="@string/button_copy" />
    	
	</LinearLayout>
    
</LinearLayout>
