<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".Activity_ShiftCipher_Two">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/field_input" />

    <EditText
        android:id="@+id/inputEditText_two"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="right"
	    android:orientation="horizontal">
	    
	    <Button
	        android:id="@+id/inputClearButton_two"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:text="@string/button_clear" />
	    
	    <Button
	        android:id="@+id/inputShiftButton_two"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:text="@string/button_shift" />
	
	</LinearLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/numberPickerString" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:orientation="horizontal">
	    
		<NumberPicker 
	        android:id="@+id/numberPicker_two"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginBottom="10dp"
	        android:orientation="horizontal" />
		        
		<NumberPicker 
	        android:id="@+id/numberPicker_two_2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginBottom="10dp"
	        android:orientation="horizontal" />
	    
    </LinearLayout>
    
    <CheckBox
        android:id="@+id/reverse_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Reverse Loop?" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/field_output" />
    
    <EditText
        android:id="@+id/outputEditText_two"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="right"
	    android:orientation="horizontal">
    
        <Button
	        android:id="@+id/outputClearButton_two"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:text="@string/button_clear" />
    
    	<Button
	        android:id="@+id/outputCopyButton_two"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:text="@string/button_copy" />
    	
	</LinearLayout>
    
</LinearLayout>
